[New Multicolumn] Multiple tests assert in RenderGeometryMap https://bugs.webkit.org/show_bug.cgi?id=132285

Reviewed by Simon Fraser.

Implement offsetFromContainer for RenderMultiColumnFlowThread so that the
geometry map gets the right offsets. This is really only relevant for the
geometry map, since I already overrode mapAbsoluteToLocalPoint and multicolumn
flow threads are repaint containers (so mapLocalToAbsolute never needs offsetFromContainer).

* rendering/RenderMultiColumnFlowThread.cpp:
(WebCore::RenderMultiColumnFlowThread::offsetFromContainer):
* rendering/RenderMultiColumnFlowThread.h:



Canonical link: https://commits.webkit.org/150387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167982 268f45cc-cd09-0410-ab3c-d52691b4dbfc